syntax = "proto3";

import "google/protobuf/empty.proto";
import "types.proto";
import "google/api/annotations.proto";

option go_package = "./proto";

service AgentService {
  rpc ListAgents(google.protobuf.Empty) returns (AgentListResponse) {
    option(google.api.http) = {
      get: "/v1/agent/all"
    };
  }
  
  rpc GetAgentInfo(GetAgentInfoRequest) returns (GetAgentInfoResponse) {
    option(google.api.http) = {
      get: "/v1/agent/{agent_id}"
    };
  }

  // Used by agent
  rpc Connect(AgentConnectionRequest) returns (AgentConnectionResponse) {
    option(google.api.http) = {
      patch: "/v1/agent/{data.id}",
      body: "*"
    };
  }
}

message AgentConnectionRequest {
  Agent data = 1;
}

message AgentConnectionResponse {
  string uuid = 1;
}

message AgentListResponse {
  repeated Agent data = 1;
}

message GetAgentInfoRequest {
  string agent_id = 1;
}

message GetAgentInfoResponse {
  Agent agent = 1;
}
